--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
     "react-native-tab-view": "3.1.1",
     "react-native-text-input-mask": "3.1.4",
     "react-native-timeago": "0.5.0",
-    "react-native-touch-id": "4.4.1",
+    "react-native-touch-id-ng": "5.0.1",
     "react-native-tracking-transparency": "0.1.1",
     "react-native-url-polyfill": "1.3.0",
     "react-native-user-agent": "2.3.1",
