[REF] revert upgrade to 0.72.x changes

--- a/package.json
+++ b/package.json
@@ -242,6 +242,7 @@
     "crypto": "react-native-crypto",
     "http": "@tradle/react-native-http",
     "https": "https-browserify",
+    "os": "react-native-os",
     "path": "path-browserify",
     "fs": "react-native-level-fs",
     "_stream_transform": "readable-stream/transform",
@@ -250,13 +251,13 @@
     "_stream_duplex": "readable-stream/duplex",
     "_stream_passthrough": "readable-stream/passthrough",
     "stream": "stream-browserify",
-    "vm": "vm-browserify",
-    "os": "react-native-os"
+    "vm": "vm-browserify"
   },
   "browser": {
     "crypto": "react-native-crypto",
     "http": "@tradle/react-native-http",
     "https": "https-browserify",
+    "os": "react-native-os",
     "path": "path-browserify",
     "fs": "react-native-level-fs",
     "_stream_transform": "readable-stream/transform",
@@ -265,10 +266,6 @@
     "_stream_duplex": "readable-stream/duplex",
     "_stream_passthrough": "readable-stream/passthrough",
     "stream": "stream-browserify",
-    "vm": "vm-browserify",
-    "os": "react-native-os"
-  },
-  "engines": {
-    "node": ">=16"
+    "vm": "vm-browserify"
   }
 }
