--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "android": "react-native run-android",
     "android:release": "react-native run-android --variant release",
     "ios": "react-native run-ios",
+    "init:desktop": "npx react-native-macos-init",
+    "desktop": "react-native run-macos",
     "ios:device": "export NODE_OPTIONS=--openssl-legacy-provider && react-native run-ios --device",
     "ios:device:release": "export NODE_OPTIONS=--openssl-legacy-provider && react-native run-ios --configuration Release --device",
     "start": "export NODE_OPTIONS=--openssl-legacy-provider && react-native start",
@@ -116,7 +118,7 @@
     "react-native-level-fs": "3.0.1",
     "react-native-linear-gradient": "2.6.2",
     "react-native-localize": "2.2.4",
-    "react-native-macos": "latest",
+    "react-native-macos": "^0.71.0-0",
     "react-native-mail": "6.1.1",
     "react-native-markdown-display": "7.0.0-alpha.2",
     "react-native-modal": "13.0.1",
